<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="hello">Hello calculator!</string>
    <string name="app_name">calculator</string>
    <string name="number_1">1</string>
    <string name="number_2">2</string>
    <string name="number_3">3</string>
    <string name="number_4">4</string>
    <string name="number_5">5</string>
    <string name="number_6">6</string>
    <string name="number_7">7</string>
    <string name="number_8">8</string>
    <string name="number_9">9</string>
    <string name="number_0">0</string>
    <string name="equals">=</string>
    <string name="oper_sum">+</string>
    <string name="oper_minus">-</string>
    <string name="oper_times">*</string>
    <string name="oper_divide">/</string>
    <string name="button_clear">AC</string>
</resources>
