<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    >

    <TextView
        android:id="@+id/calculatorDisplay"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="right"
        android:text="@string/number_0"
        android:textAppearance="?android:attr/textAppearanceLarge" />

<LinearLayout
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:layout_weight="0.75" >

    <Button
        android:id="@+id/button1"
        style="?android:attr/buttonStyleSmall"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight=".75"
        android:onClick="digitClicked"
        android:tag="1"
        android:text="@string/number_1" />

    <Button
        android:id="@+id/button2"
        style="?android:attr/buttonStyleSmall"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight=".75"
        android:onClick="digitClicked"
        android:tag="2"
        android:text="@string/number_2" />

    <Button
        android:id="@+id/button3"
        style="?android:attr/buttonStyleSmall"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight=".75"
        android:onClick="digitClicked"
        android:tag="3"
        android:text="@string/number_3" />

    <Button
        android:id="@+id/button10"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight=".75"
        android:onClick="operClicked"
        android:tag="0"
        android:text="@string/oper_sum" />

</LinearLayout>

<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_weight="0.75" >

    <Button
        android:id="@+id/button4"
        style="?android:attr/buttonStyleSmall"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight=".75"
        android:onClick="digitClicked"
        android:tag="4"
        android:text="@string/number_4" />

    <Button
        android:id="@+id/button5"
        style="?android:attr/buttonStyleSmall"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight=".75"
        android:onClick="digitClicked"
        android:tag="5"
        android:text="@string/number_5" />

    <Button
        android:id="@+id/button6"
        style="?android:attr/buttonStyleSmall"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight=".75"
        android:onClick="digitClicked"
        android:tag="6"
        android:text="@string/number_6" />

    <Button
        android:id="@+id/button12"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight=".75"
        android:onClick="operClicked"
        android:tag="1"
        android:text="@string/oper_minus" />

</LinearLayout>

<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_weight="0.75" >

    <Button
        android:id="@+id/button7"
        style="?android:attr/buttonStyleSmall"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:onClick="digitClicked"
        android:tag="7"
        android:text="@string/number_7" />

    <Button
        android:id="@+id/button8"
        style="?android:attr/buttonStyleSmall"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:onClick="digitClicked"
        android:tag="8"
        android:text="@string/number_8" />

    <Button
        android:id="@+id/button9"
        style="?android:attr/buttonStyleSmall"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:onClick="digitClicked"
        android:tag="9"
        android:text="@string/number_9" />

    <Button
        android:id="@+id/button13"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:onClick="operClicked"
        android:tag="2"
        android:text="@string/oper_times" />

</LinearLayout>

<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_weight="0.75" >

    <Button
        android:id="@+id/button0"
        style="?android:attr/buttonStyleSmall"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:onClick="digitClicked"
        android:tag="0"
        android:text="@string/number_0" />

    <Button
        android:id="@+id/button_equals"
        style="?android:attr/buttonStyleSmall"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:text="@string/equals" />

    <Button
        android:id="@+id/button11"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:onClick="clearClicked"
        android:text="@string/button_clear" />

    <Button
        android:id="@+id/button14"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:onClick="operClicked"
        android:tag="3"
        android:text="@string/oper_divide" />

</LinearLayout>

</LinearLayout>
